Add seo description to all docs pages

--- a/app/docs/configuration/auto-update/page.mdx
+++ b/app/docs/configuration/auto-update/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn about the auto-update feature in SkinsRestorer.
+---
+
 import {Callout} from "nextra/components";
 
 # Auto update
