--- a/app/docs/configuration/commands-permissions/page.mdx
+++ b/app/docs/configuration/commands-permissions/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to use commands and permissions in SkinsRestorer.
+---
+
 import {Callout} from "nextra/components"
 
 # Commands and Permissions
