--- a/app/docs/configuration/options/page.mdx
+++ b/app/docs/configuration/options/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn the various configuration options in SkinsRestorer.
+---
+
 import {Callout, FileTree} from "nextra/components";
 
 # Configuration Options
