--- a/app/docs/configuration/page.mdx
+++ b/app/docs/configuration/page.mdx
@@ -1,5 +1,6 @@
 ---
 asIndexPage: true
+description: Learn how to set up SkinsRestorer on your server.
 ---
 
 import {Cards} from "nextra/components";
