--- a/app/docs/development/api/page.mdx
+++ b/app/docs/development/api/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to use the SkinsRestorer developer API.
+---
+
 import {Callout, Tabs} from "nextra/components";
 
 # SkinsRestorer API
