--- a/app/docs/development/inner-workings/page.mdx
+++ b/app/docs/development/inner-workings/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how SkinsRestorer works under the hood.
+---
+
 import {Callout} from "nextra/components";
 
 # Inner workings of SkinsRestorer
