--- a/app/docs/development/storage/page.mdx
+++ b/app/docs/development/storage/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how SkinsRestorer manages skin and player data.
+---
+
 # How SkinsRestorer stores data
 
 SkinsRestorer stores skin data in a file or database (depending on your configuration).
