--- a/app/docs/features/custom-skins/page.mdx
+++ b/app/docs/features/custom-skins/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to use custom skins with SkinsRestorer.
+---
+
 import {Callout} from "nextra/components";
 
 # Custom Skins
