--- a/app/docs/features/skin-design/page.mdx
+++ b/app/docs/features/skin-design/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to design skins for SkinsRestorer.
+---
+
 # Skin Design
 
 SkinsRestorer allows players and admins to apply custom skins. Skins are basically just `64x64` PNG images stored on the Minecraft CDN and signed via the yggdrasil private key.
