--- a/app/docs/installation/bukkit/page.mdx
+++ b/app/docs/installation/bukkit/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to install SkinsRestorer on your Bukkit/Spigot/Paper server.
+---
+
 import {Callout, Steps} from "nextra/components";
 
 # Installation on Bukkit/Spigot/Paper
