--- a/app/docs/installation/page.mdx
+++ b/app/docs/installation/page.mdx
@@ -1,5 +1,6 @@
 ---
 asIndexPage: true
+description: Learn how to install SkinsRestorer on your Minecraft server.
 ---
 
 import {Callout, Cards} from "nextra/components";
