--- a/app/docs/installation/velocity/page.mdx
+++ b/app/docs/installation/velocity/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to install SkinsRestorer on your Velocity proxy.
+---
+
 import {Callout, Steps} from "nextra/components";
 
 # Installation on Velocity
