--- a/app/docs/integrations/avatar-url/page.mdx
+++ b/app/docs/integrations/avatar-url/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to use SkinsRestorer avatars in other plugins.
+---
+
 import {Callout, Steps} from "nextra/components";
 
 # Avatar URL
