--- a/app/docs/integrations/discord-mc-chat/page.mdx
+++ b/app/docs/integrations/discord-mc-chat/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to integrate SkinsRestorer with Discord-MC-Chat.
+---
+
 import {Steps} from "nextra/components";
 
 # Discord-MC-Chat
