--- a/app/docs/integrations/placeholderapi/page.mdx
+++ b/app/docs/integrations/placeholderapi/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to integrate SkinsRestorer with PlaceholderAPI.
+---
+
 # PlaceholderAPI
 
 SkinsRestorer supports PlaceholderAPI placeholders. These placeholders are automatically registered with
