--- a/app/docs/page.mdx
+++ b/app/docs/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Introduction to SkinsRestorer and its features.
+---
+
 # Introduction
 
 SkinsRestorer is a plugin that restores skins for offline mode servers & networks that gives the players the ability to
