--- a/app/docs/troubleshooting/firewall/page.mdx
+++ b/app/docs/troubleshooting/firewall/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to resolve SkinRestorer firewall issues.
+---
+
 import {Callout} from "nextra/components";
 
 # Firewall
