--- a/app/docs/troubleshooting/incompatibility-list/page.mdx
+++ b/app/docs/troubleshooting/incompatibility-list/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn about known incompatibilities with SkinsRestorer.
+---
+
 # Incompatibility list
 
 SkinsRestorer may collide with third-party software such as plugins, mods, launchers, etc.
