--- a/app/docs/troubleshooting/launcher-issues/page.mdx
+++ b/app/docs/troubleshooting/launcher-issues/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to fix issues with skins in third-party Minecraft launchers.
+---
+
 import {Callout} from "nextra/components";
 
 # Launcher skin issues
