--- a/app/docs/troubleshooting/page.mdx
+++ b/app/docs/troubleshooting/page.mdx
@@ -1,5 +1,6 @@
 ---
 asIndexPage: true
+description: Learn how to troubleshoot issues with SkinsRestorer.
 ---
 
 import {Cards} from "nextra/components";
