--- a/app/docs/configuration/locale-translations/page.mdx
+++ b/app/docs/configuration/locale-translations/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to translate SkinsRestorer messages.
+---
+
 import {Callout} from "nextra/components"
 
 # Locale and Translations
