--- a/app/docs/features/skin-url/page.mdx
+++ b/app/docs/features/skin-url/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to use a custom skin by using a URL with SkinsRestorer.
+---
+
 import {Steps} from "nextra/components";
 
 # Skin URL
