--- a/app/docs/installation/bungeecord/page.mdx
+++ b/app/docs/installation/bungeecord/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to install SkinsRestorer on your BungeeCord proxy.
+---
+
 import {Callout, Steps} from "nextra/components";
 
 # Installation on BungeeCord
