--- a/app/docs/integrations/discordsrv/page.mdx
+++ b/app/docs/integrations/discordsrv/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to integrate SkinsRestorer with DiscordSRV.
+---
+
 import {Steps} from "nextra/components";
 
 # DiscordSRV
