--- a/app/docs/troubleshooting/common-issues/page.mdx
+++ b/app/docs/troubleshooting/common-issues/page.mdx
@@ -1,3 +1,7 @@
+---
+description: Learn how to troubleshoot common issues with SkinsRestorer.
+---
+
 # Common issues
 
 We've compiled a list of common issues that users encounter when using the plugin.
