--- a/app/docs/development/inner-workings/page.mdx
+++ b/app/docs/development/inner-workings/page.mdx
@@ -16,8 +16,8 @@ Want to know what SkinsRestorer does under the hood? This page touches on a few 
 ## Recap
 
 As explained in the [storage page](/docs/development/storage), SkinsRestorer needs to ask Mojang for the skin of a player.
-Mojang has built restrictions into their Minecraft client to prevent servers from settings skins of players without going through their servers.
-The reason is likely that they want to prevent servers from setting explicit skins for players, so children are not exposed to inappropriate content.
+Mojang has built restrictions into their Minecraft client to prevent servers from setting skins of players without going through their servers.
+The reason for this is likely that they want to prevent servers from setting explicit skins for players, so children are not exposed to inappropriate content.
 They also use this to make capes exclusive to certain players, like Minecon attendees.
 
 <Callout emoji="📔">
