--- a/app/docs/troubleshooting/page.mdx
+++ b/app/docs/troubleshooting/page.mdx
@@ -4,7 +4,7 @@ description: Learn how to troubleshoot issues with SkinsRestorer.
 ---
 
 import {Cards} from "nextra/components";
-import {ComputerDesktopIcon, ExclamationTriangleIcon, FireIcon, LifebuoyIcon} from "@heroicons/react/24/solid";
+import {ComputerDesktopIcon, ExclamationTriangleIcon, FireIcon, GlobeAltIcon, LifebuoyIcon} from "@heroicons/react/24/solid";
 
 # Fixing issues with SkinsRestorer
 
@@ -21,6 +21,14 @@ In these sections, you can read on different ways to troubleshoot issues with Sk
     }
     title="Common issues"
     href="/docs/troubleshooting/common-issues"
+  >
+  </Cards.Card>
+  <Cards.Card
+    icon={
+      <GlobeAltIcon/>
+    }
+    title="Proxy Mode"
+    href="/docs/troubleshooting/proxy-mode"
   >
   </Cards.Card>
   <Cards.Card
