feat: prepare docs

--- a/content/docs/configuration/index.mdx
+++ b/content/docs/configuration/index.mdx
@@ -1,9 +1,8 @@
 ---
-asIndexPage: true
 description: Learn how to set up SkinsRestorer on your server.
 ---
 
-import {Cards} from "nextra/components";
+import { Cards, Card } from 'fumadocs-ui/components/card';
 import {ArrowPathIcon, ChatBubbleLeftEllipsisIcon, Cog6ToothIcon, CommandLineIcon} from "@heroicons/react/24/solid";
 
 # Setting up SkinsRestorer
@@ -15,36 +14,36 @@ While SkinsRestorer works out-of-the-box, you might want to change some settings
 In these sections, you can read on the different aspects of the SkinsRestorer configuration.
 
 <Cards>
-    <Cards.Card
+    <Card
         icon={
             <Cog6ToothIcon/>
         }
         title="Configuration Options"
         href="/docs/configuration/options"
     >
-    </Cards.Card>
-    <Cards.Card
+    </Card>
+    <Card
         icon={
             <CommandLineIcon/>
         }
         title="Commands and Permissions"
         href="/docs/configuration/commands-permissions"
     >
-    </Cards.Card>
-    <Cards.Card
+    </Card>
+    <Card
         icon={
             <ChatBubbleLeftEllipsisIcon/>
         }
         title="Locale and Translations"
         href="/docs/configuration/locale-translations"
     >
-    </Cards.Card>
-    <Cards.Card
+    </Card>
+    <Card
         icon={
             <ArrowPathIcon/>
         }
         title="Auto update"
         href="/docs/configuration/auto-update"
     >
-    </Cards.Card>
+    </Card>
 </Cards>
