--- a/content/docs/features/custom-skins.mdx
+++ b/content/docs/features/custom-skins.mdx
@@ -2,7 +2,7 @@
 description: Learn how to use custom skins with SkinsRestorer.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';;
+import { Callout } from 'fumadocs-ui/components/callout';
 
 # Custom Skins
 
