--- a/content/docs/features/index.mdx
+++ b/content/docs/features/index.mdx
@@ -1,9 +1,8 @@
 ---
-asIndexPage: true
 description: Learn how to use SkinsRestorer's features.
 ---
 
-import {Cards} from "nextra/components";
+import { Cards, Card } from 'fumadocs-ui/components/card';
 import {
     GlobeAltIcon,
     PaintBrushIcon,
@@ -20,36 +19,36 @@ SkinsRestorer has multiple features that you can use to get a better experience 
 In these sections, you can on different aspects of SkinsRestorer and how to use them.
 
 <Cards>
-    <Cards.Card
+    <Card
         icon={
             <UserIcon/>
         }
         title="Custom Skins"
         href="/docs/features/custom-skins"
     >
-    </Cards.Card>
-    <Cards.Card
+    </Card>
+    <Card
         icon={
             <GlobeAltIcon/>
         }
         title="Skin URL"
         href="/docs/features/skin-url"
     >
-    </Cards.Card>
-    <Cards.Card
+    </Card>
+    <Card
         icon={
             <PaintBrushIcon/>
         }
         title="Skin Edit"
         href="/docs/features/skin-edit"
     >
-    </Cards.Card>
-    <Cards.Card
+    </Card>
+    <Card
         icon={
             <PhotoIcon/>
         }
         title="Skin Design"
         href="/docs/features/skin-design"
     >
-    </Cards.Card>
+    </Card>
 </Cards>
