--- a/content/docs/troubleshooting/firewall.mdx
+++ b/content/docs/troubleshooting/firewall.mdx
@@ -2,7 +2,7 @@
 description: Learn how to resolve SkinRestorer firewall issues.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';;
+import { Callout } from 'fumadocs-ui/components/callout';
 
 # Firewall
 
