--- a/content/docs/troubleshooting/launcher-issues.mdx
+++ b/content/docs/troubleshooting/launcher-issues.mdx
@@ -2,7 +2,7 @@
 description: Learn how to fix issues with skins in third-party Minecraft launchers.
 ---
 
-import { Callout } from 'fumadocs-ui/components/callout';;
+import { Callout } from 'fumadocs-ui/components/callout';
 
 # Launcher skin issues
 
