--- a/content/docs/installation/index.mdx
+++ b/content/docs/installation/index.mdx
@@ -1,9 +1,8 @@
 ---
-asIndexPage: true
 description: Learn how to install SkinsRestorer on your Minecraft server.
 ---
 
-import {Cards} from "nextra/components";
+import { Cards, Card } from 'fumadocs-ui/components/card';
 import { Callout } from 'fumadocs-ui/components/callout';
 import Image from "next/image";
 
@@ -32,7 +31,7 @@ In this section, you can read how to set up SkinsRestorer on your Minecraft Serv
 Select your server type below to get started.
 
 <Cards>
-    <Cards.Card
+    <Card
         icon={
             <Image
                 src="/platform/bukkit.png"
@@ -43,8 +42,8 @@ Select your server type below to get started.
         title="Bukkit/Spigot/Paper"
         href="/docs/installation/bukkit"
     >
-    </Cards.Card>
-    <Cards.Card
+    </Card>
+    <Card
         icon={
             <Image
                 src="/platform/bungeecord.png"
@@ -55,8 +54,8 @@ Select your server type below to get started.
         title="BungeeCord"
         href="/docs/installation/bungeecord"
     >
-    </Cards.Card>
-    <Cards.Card
+    </Card>
+    <Card
         icon={
             <svg viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g >
@@ -72,5 +71,5 @@ Select your server type below to get started.
         title="Velocity"
         href="/docs/installation/velocity"
     >
-    </Cards.Card>
+    </Card>
 </Cards>
