--- a/content/docs/integrations/avatar-url.mdx
+++ b/content/docs/integrations/avatar-url.mdx
@@ -2,7 +2,8 @@
 description: Learn how to use SkinsRestorer avatars in other plugins.
 ---
 
-import {Steps} from "nextra/components";
+
+import { Step, Steps } from 'fumadocs-ui/components/steps';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # Avatar URL
@@ -10,15 +11,22 @@ import { Callout } from 'fumadocs-ui/components/callout';
 Do you want to show a player's head in, for example, a Discord message sent by a plugin? This is possible with SkinsRestorer!
 
 <Callout type="info" emoji="ℹ️">
-    We also have guides specifically for [DiscordSRV](/docs/integrations/discordsrv) or [Discord-MC-Chat](/docs/integrations/discord-mc-chat).
+  We also have guides specifically for [DiscordSRV](/docs/integrations/discordsrv) or
+  [Discord-MC-Chat](/docs/integrations/discord-mc-chat).
 </Callout>
 
 <Steps>
+  <Step>
     ### Prepare your server
-    Ensure [SkinsRestorer](/docs/installation) and [PlaceholderAPI](https://www.spigotmc.org/resources/placeholderapi.6245/) are installed on your server, are the latest version and are working correctly.
+    Ensure [SkinsRestorer](/docs/installation) and
+    [PlaceholderAPI](https://www.spigotmc.org/resources/placeholderapi.6245/) are installed on your server, are the
+    latest version and are working correctly.
 
-    Make sure the plugin you want to set the avatar URL in, supports using PlaceholderAPI placeholders in the place where you want to use the avatar URL.
+    Make sure the plugin you want to set the avatar URL in, supports using PlaceholderAPI placeholders in the place
+    where you want to use the avatar URL.
+  </Step>
 
+  <Step>
     ### Configure the plugin
     Find the place where you can put a URL in the plugin. This is usually a config file or a message file.
     Put the following URL in the place where you want the avatar URL to be used:
@@ -26,10 +34,15 @@ Do you want to show a player's head in, for example, a Discord message sent by a
     ```yaml
     https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png
     ```
+  </Step>
 
+  <Step>
     ### Reload the plugin
     Reload the plugin to apply the changes.
+  </Step>
 
+  <Step>
     ### That's it!
     Now all SkinsRestorer avatars will be displayed in the plugins messages! 🎉
+  </Step>
 </Steps>
