--- a/content/docs/integrations/discordsrv.mdx
+++ b/content/docs/integrations/discordsrv.mdx
@@ -2,7 +2,8 @@
 description: Learn how to integrate SkinsRestorer with DiscordSRV.
 ---
 
-import {Steps} from "nextra/components";
+
+import { Step, Steps } from 'fumadocs-ui/components/steps';
 
 # DiscordSRV
 
@@ -11,15 +12,20 @@ SkinsRestorer skins can be used for DiscordSRV messages using the PlaceholderAPI
 ## Setup instructions
 
 <Steps>
+  <Step>
     ### Prepare your server
-    Ensure [SkinsRestorer](/docs/installation), [DiscordSRV](https://www.spigotmc.org/resources/discordsrv.18494/) and [PlaceholderAPI](https://www.spigotmc.org/resources/placeholderapi.6245/) are installed on your server, are the latest version and are working correctly.
+    Ensure [SkinsRestorer](/docs/installation), [DiscordSRV](https://www.spigotmc.org/resources/discordsrv.18494/) and
+    [PlaceholderAPI](https://www.spigotmc.org/resources/placeholderapi.6245/) are installed on your server, are the
+    latest version and are working correctly.
+  </Step>
 
+  <Step>
     ### Configure DiscordSRV
     Open your DiscordSRV `config.yml` and search for the `Embed & webhook image/avatar url format` section.
     The config setting looks like this:
 
     ```yaml filename="plugins/DiscordSRV/config.yml"
-    AvatarUrl: https://crafatar.com/avatars/{uuid-nodashes}.png?size={size}&overlay#{texture}
+    AvatarUrl: https://crafatar.com/avatars/{uuid - nodashes}.png?size={size}&overlay#{texture}
     ```
 
     You have to replace it with the following:
@@ -27,10 +33,15 @@ SkinsRestorer skins can be used for DiscordSRV messages using the PlaceholderAPI
     ```yaml filename="plugins/DiscordSRV/config.yml"
     AvatarUrl: https://mc-heads.net/avatar/%skinsrestorer_texture_id_or_steve%.png#{username}
     ```
+  </Step>
 
+  <Step>
     ### Reload DiscordSRV
     Run `/discord reload` to reload DiscordSRV.
+  </Step>
 
+  <Step>
     ### That's it!
     Now all SkinsRestorer avatars will be displayed in DiscordSRV messages! 🎉
+  </Step>
 </Steps>
