feat: further improvements

--- a/content/docs/configuration/index.mdx
+++ b/content/docs/configuration/index.mdx
@@ -2,8 +2,8 @@
 description: Learn how to set up SkinsRestorer on your server.
 ---
 
-import { Cards, Card } from 'fumadocs-ui/components/card';
-import {ArrowPathIcon, ChatBubbleLeftEllipsisIcon, Cog6ToothIcon, CommandLineIcon} from "@heroicons/react/24/solid";
+import { Card, Cards } from 'fumadocs-ui/components/card';
+import { ArrowPathIcon, ChatBubbleLeftEllipsisIcon, Cog6ToothIcon, CommandLineIcon } from '@heroicons/react/24/solid';
 
 # Setting up SkinsRestorer
 
@@ -14,36 +14,36 @@ While SkinsRestorer works out-of-the-box, you might want to change some settings
 In these sections, you can read on the different aspects of the SkinsRestorer configuration.
 
 <Cards>
-    <Card
-        icon={
-            <Cog6ToothIcon/>
-        }
-        title="Configuration Options"
-        href="/docs/configuration/options"
-    >
-    </Card>
-    <Card
-        icon={
-            <CommandLineIcon/>
-        }
-        title="Commands and Permissions"
-        href="/docs/configuration/commands-permissions"
-    >
-    </Card>
-    <Card
-        icon={
-            <ChatBubbleLeftEllipsisIcon/>
-        }
-        title="Locale and Translations"
-        href="/docs/configuration/locale-translations"
-    >
-    </Card>
-    <Card
-        icon={
-            <ArrowPathIcon/>
-        }
-        title="Auto update"
-        href="/docs/configuration/auto-update"
-    >
-    </Card>
+  <Card
+    icon={
+      <Cog6ToothIcon />
+    }
+    title="Configuration Options"
+    href="/docs/configuration/options"
+  >
+  </Card>
+  <Card
+    icon={
+      <CommandLineIcon />
+    }
+    title="Commands and Permissions"
+    href="/docs/configuration/commands-permissions"
+  >
+  </Card>
+  <Card
+    icon={
+      <ChatBubbleLeftEllipsisIcon />
+    }
+    title="Locale and Translations"
+    href="/docs/configuration/locale-translations"
+  >
+  </Card>
+  <Card
+    icon={
+      <ArrowPathIcon />
+    }
+    title="Auto update"
+    href="/docs/configuration/auto-update"
+  >
+  </Card>
 </Cards>
