--- a/content/docs/configuration/locale-translations.mdx
+++ b/content/docs/configuration/locale-translations.mdx
@@ -26,7 +26,8 @@ If your locale is missing, you can contact support [on our Discord](https://skin
 ## Custom translations
 
 <Callout type="warning" emoji="⚠️">
-    If you are using a Proxy (BungeeCord/Velocity), you must configure locale files on every server as well as on the proxy.
+  If you are using a Proxy (BungeeCord/Velocity), you must configure locale files on every server as well as on the
+  proxy.
 </Callout>
 
 Inside the `plugins/SkinsRestorer/locale` folder, you can find two folders, `repository` and `custom`.
