--- a/content/docs/development/index.mdx
+++ b/content/docs/development/index.mdx
@@ -2,8 +2,8 @@
 description: Learn how to integrate your application with SkinsRestorer.
 ---
 
-import { Cards, Card } from 'fumadocs-ui/components/card';
-import {CommandLineIcon, CircleStackIcon, Cog6ToothIcon} from "@heroicons/react/24/solid";
+import { Card, Cards } from 'fumadocs-ui/components/card';
+import { CircleStackIcon, Cog6ToothIcon, CommandLineIcon } from '@heroicons/react/24/solid';
 
 # SkinsRestorer Development
 
@@ -17,7 +17,7 @@ In these sections, you can read about how to develop with the SkinsRestorer API.
 <Cards>
   <Card
     icon={
-      <CommandLineIcon/>
+      <CommandLineIcon />
     }
     title="API"
     href="/docs/development/api"
@@ -25,7 +25,7 @@ In these sections, you can read about how to develop with the SkinsRestorer API.
   </Card>
   <Card
     icon={
-      <CircleStackIcon/>
+      <CircleStackIcon />
     }
     title="Data Storage"
     href="/docs/development/data-storage"
@@ -33,7 +33,7 @@ In these sections, you can read about how to develop with the SkinsRestorer API.
   </Card>
   <Card
     icon={
-      <Cog6ToothIcon/>
+      <Cog6ToothIcon />
     }
     title="Inner workings"
     href="/docs/development/inner-workings"
