--- a/content/docs/development/inner-workings.mdx
+++ b/content/docs/development/inner-workings.mdx
@@ -7,8 +7,8 @@ import { Callout } from 'fumadocs-ui/components/callout';
 # Inner workings of SkinsRestorer
 
 <Callout type="info">
-    We recommend reading the [storage page](/docs/development/storage) before reading this page,
-    it explains a few basic concepts that are used in this page.
+  We recommend reading the [storage page](/docs/development/storage) before reading this page,
+  it explains a few basic concepts that are used in this page.
 </Callout>
 
 Want to know what SkinsRestorer does under the hood? This page touches on a few things that SkinsRestorer does, so you can understand how it works.
@@ -21,7 +21,8 @@ The reason for this is likely that they want to prevent servers from setting exp
 They also use this to make capes exclusive to certain players, like Minecon attendees.
 
 <Callout emoji="📔">
-    Extra note: You can set any skin you want on Minecraft heads, the restrictions are only for player skins. (This also includes NPCs from Citizens)
+  Extra note: You can set any skin you want on Minecraft heads, the restrictions are only for player skins. (This also
+  includes NPCs from Citizens)
 </Callout>
 
 We're using two methods to get you the skin you want.
