--- a/content/docs/features/skin-url.mdx
+++ b/content/docs/features/skin-url.mdx
@@ -31,17 +31,17 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
     We have a [skin design](/docs/features/skin-design) guide if you need help with that.
 
     ![Image in download folder](/assets/imgur/download-folder.png)
-    </Step>
+  </Step>
 
-    <Step>
+  <Step>
     ### Go to https://imgur.com/upload
 
     Upload the file to **imgur** (see image below)
 
     ![Dropping skin image into imgur](/assets/imgur/upload-image.png)
-    </Step>
+  </Step>
 
-      <Step>
+  <Step>
     ### Getting the URL
 
     The Skin URL **__must__** end with `.png`, so make sure that you have the right URL!
@@ -53,7 +53,7 @@ This time we are going to upload your custom skin format to imgur. Follow the fo
     ![Copy link from uploaded image](/assets/imgur/copy-link.png)
 
     That's it! You can now set the skin by using your **imgur** URL!
-    The command to set the skin is `/skin url "<url>"`.
+    The command to set the skin is `/skin url "url"`.
     Make sure the URL is in quotes.
-      </Step>
+  </Step>
 </Steps>
