--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -3,7 +3,7 @@ description: Introduction to SkinsRestorer and its features.
 ---
 
 import { DownloadIcon } from 'lucide-react';
-import { Cards, Card } from 'fumadocs-ui/components/card';
+import { Card, Cards } from 'fumadocs-ui/components/card';
 
 # Introduction
 
@@ -31,6 +31,6 @@ So, what is it in for you?
 ## Getting started
 
 <Cards>
-    <Card icon={<DownloadIcon/>} title="Install SkinsRestorer" href="/docs/installation">
-    </Card>
+  <Card icon={<DownloadIcon />} title="Install SkinsRestorer" href="/docs/installation">
+  </Card>
 </Cards>
