--- a/content/docs/integrations/index.mdx
+++ b/content/docs/integrations/index.mdx
@@ -2,8 +2,13 @@
 description: Learn how to integrate third-party software with SkinsRestorer.
 ---
 
-import { Cards, Card } from 'fumadocs-ui/components/card';
-import {ChatBubbleBottomCenterTextIcon, ChatBubbleLeftRightIcon, UserCircleIcon, CodeBracketIcon} from "@heroicons/react/24/solid";
+import { Card, Cards } from 'fumadocs-ui/components/card';
+import {
+  ChatBubbleBottomCenterTextIcon,
+  ChatBubbleLeftRightIcon,
+  CodeBracketIcon,
+  UserCircleIcon
+} from '@heroicons/react/24/solid';
 
 # SkinsRestorer Integrations
 
@@ -16,7 +21,7 @@ In these sections, you can read on different possible integrations with third-pa
 <Cards>
   <Card
     icon={
-      <CodeBracketIcon/>
+      <CodeBracketIcon />
     }
     title="PlaceholderAPI"
     href="/docs/integrations/placeholderapi"
@@ -24,7 +29,7 @@ In these sections, you can read on different possible integrations with third-pa
   </Card>
   <Card
     icon={
-      <ChatBubbleLeftRightIcon/>
+      <ChatBubbleLeftRightIcon />
     }
     title="DiscordSRV"
     href="/docs/integrations/discordsrv"
@@ -32,7 +37,7 @@ In these sections, you can read on different possible integrations with third-pa
   </Card>
   <Card
     icon={
-      <ChatBubbleBottomCenterTextIcon/>
+      <ChatBubbleBottomCenterTextIcon />
     }
     title="Discord MC Chat"
     href="/docs/integrations/discord-mc-chat"
@@ -40,7 +45,7 @@ In these sections, you can read on different possible integrations with third-pa
   </Card>
   <Card
     icon={
-      <UserCircleIcon/>
+      <UserCircleIcon />
     }
     title="Avatar URL"
     href="/docs/integrations/avatar-url"
