--- a/content/docs/troubleshooting/index.mdx
+++ b/content/docs/troubleshooting/index.mdx
@@ -2,8 +2,14 @@
 description: Learn how to troubleshoot issues with SkinsRestorer.
 ---
 
-import { Cards, Card } from 'fumadocs-ui/components/card';
-import {ComputerDesktopIcon, ExclamationTriangleIcon, FireIcon, GlobeAltIcon, LifebuoyIcon} from "@heroicons/react/24/solid";
+import { Card, Cards } from 'fumadocs-ui/components/card';
+import {
+  ComputerDesktopIcon,
+  ExclamationTriangleIcon,
+  FireIcon,
+  GlobeAltIcon,
+  LifebuoyIcon
+} from '@heroicons/react/24/solid';
 
 # Fixing issues with SkinsRestorer
 
@@ -16,7 +22,7 @@ In these sections, you can read on different ways to troubleshoot issues with Sk
 <Cards>
   <Card
     icon={
-      <LifebuoyIcon/>
+      <LifebuoyIcon />
     }
     title="Common issues"
     href="/docs/troubleshooting/common-issues"
@@ -24,7 +30,7 @@ In these sections, you can read on different ways to troubleshoot issues with Sk
   </Card>
   <Card
     icon={
-      <GlobeAltIcon/>
+      <GlobeAltIcon />
     }
     title="Proxy Mode"
     href="/docs/troubleshooting/proxy-mode"
@@ -32,26 +38,26 @@ In these sections, you can read on different ways to troubleshoot issues with Sk
   </Card>
   <Card
     icon={
-      <FireIcon/>
+      <FireIcon />
     }
     title="Firewall"
     href="/docs/troubleshooting/firewall"
   >
   </Card>
-    <Card
-        icon={
-            <ExclamationTriangleIcon/>
-        }
-        title="Incompatibility list"
-        href="/docs/troubleshooting/incompatibility-list"
-    >
-    </Card>
-    <Card
-        icon={
-            <ComputerDesktopIcon/>
-        }
-        title="Launcher issues"
-        href="/docs/troubleshooting/launcher-issues"
-    >
-    </Card>
+  <Card
+    icon={
+      <ExclamationTriangleIcon />
+    }
+    title="Incompatibility list"
+    href="/docs/troubleshooting/incompatibility-list"
+  >
+  </Card>
+  <Card
+    icon={
+      <ComputerDesktopIcon />
+    }
+    title="Launcher issues"
+    href="/docs/troubleshooting/launcher-issues"
+  >
+  </Card>
 </Cards>
