--- a/content/docs/configuration/options.mdx
+++ b/content/docs/configuration/options.mdx
@@ -2,7 +2,7 @@
 description: Learn the various configuration options in SkinsRestorer.
 ---
 
-import { File, Folder, Files } from 'fumadocs-ui/components/files';
+import { File, Files, Folder } from 'fumadocs-ui/components/files';
 import { Callout } from 'fumadocs-ui/components/callout';
 
 # Configuration Options
@@ -11,17 +11,17 @@ The plugin should be able to run without extra configuration needed,
 but if you need to change the plugin behavior, you're in the right place here.
 
 <Callout type="info" emoji="ℹ️">
-    After changing the configuration, you need to either reload the plugin with the command `/sr reload` or restart the
-    server.
+  After changing the configuration, you need to either reload the plugin with the command `/sr reload` or restart the
+  server.
 </Callout>
 
 <Callout type="info" emoji="ℹ️">
-    If you run a proxy network (BungeeCord/Velocity), you need to have the exact same `config.yml` file on the proxy and
-    all servers.
-    If you make a change to the config on the proxy, you need to make the same change on all servers.
-    Make sure to reload the plugin on the proxy and all servers after changing the configuration.
-    The `/sr reload` command is only available on the proxy (Because all backend servers are in Proxy Mode),
-    you'll need to restart the servers to use the new config.
+  If you run a proxy network (BungeeCord/Velocity), you need to have the exact same `config.yml` file on the proxy and
+  all servers.
+  If you make a change to the config on the proxy, you need to make the same change on all servers.
+  Make sure to reload the plugin on the proxy and all servers after changing the configuration.
+  The `/sr reload` command is only available on the proxy (Because all backend servers are in Proxy Mode),
+  you'll need to restart the servers to use the new config.
 </Callout>
 
 ## File structure
@@ -29,32 +29,32 @@ but if you need to change the plugin behavior, you're in the right place here.
 Below is an example of what the file structure of the SkinsRestorer plugin looks like. Click a folder to expand it.
 
 <Files>
-    <Folder name="plugins" defaultOpen>
-        <Folder name="SkinsRestorer" defaultOpen>
-            <File name="config.yml" active />
-            <Folder name="locales" defaultOpen>
-                <Folder name="repository">
-                    <File name="locale.json" />
-                    <File name="locale_es.json" />
-                    <File name="locale_fr.json" />
-                    <File name="locale_it.json" />
-                    <File name="locale_nl.json" />
-                </Folder>
-                <Folder name="custom">
-                    <></>
-                </Folder>
-            </Folder>
-            <Folder name="cache">
-                <File name="Pistonmaster.mojangcache" />
-            </Folder>
-            <Folder name="players">
-                <File name="b1ae0778-4817-436c-96a3-a72c67cda060.player" />
-            </Folder>
-            <Folder name="skins">
-                <File name="b1ae0778-4817-436c-96a3-a72c67cda060.playerskin" />
-            </Folder>
+  <Folder name="plugins" defaultOpen>
+    <Folder name="SkinsRestorer" defaultOpen>
+      <File name="config.yml" active />
+      <Folder name="locales" defaultOpen>
+        <Folder name="repository">
+          <File name="locale.json" />
+          <File name="locale_es.json" />
+          <File name="locale_fr.json" />
+          <File name="locale_it.json" />
+          <File name="locale_nl.json" />
         </Folder>
+        <Folder name="custom">
+          <></>
+        </Folder>
+      </Folder>
+      <Folder name="cache">
+        <File name="Pistonmaster.mojangcache" />
+      </Folder>
+      <Folder name="players">
+        <File name="b1ae0778-4817-436c-96a3-a72c67cda060.player" />
+      </Folder>
+      <Folder name="skins">
+        <File name="b1ae0778-4817-436c-96a3-a72c67cda060.playerskin" />
+      </Folder>
     </Folder>
+  </Folder>
 </Files>
 
 ## Who can change skins?
