--- a/content/docs/features/index.mdx
+++ b/content/docs/features/index.mdx
@@ -2,13 +2,8 @@
 description: Learn how to use SkinsRestorer's features.
 ---
 
-import { Cards, Card } from 'fumadocs-ui/components/card';
-import {
-    GlobeAltIcon,
-    PaintBrushIcon,
-    PhotoIcon,
-    UserIcon
-} from "@heroicons/react/24/solid";
+import { Card, Cards } from 'fumadocs-ui/components/card';
+import { GlobeAltIcon, PaintBrushIcon, PhotoIcon, UserIcon } from '@heroicons/react/24/solid';
 
 # Using SkinsRestorer
 
@@ -19,36 +14,36 @@ SkinsRestorer has multiple features that you can use to get a better experience 
 In these sections, you can on different aspects of SkinsRestorer and how to use them.
 
 <Cards>
-    <Card
-        icon={
-            <UserIcon/>
-        }
-        title="Custom Skins"
-        href="/docs/features/custom-skins"
-    >
-    </Card>
-    <Card
-        icon={
-            <GlobeAltIcon/>
-        }
-        title="Skin URL"
-        href="/docs/features/skin-url"
-    >
-    </Card>
-    <Card
-        icon={
-            <PaintBrushIcon/>
-        }
-        title="Skin Edit"
-        href="/docs/features/skin-edit"
-    >
-    </Card>
-    <Card
-        icon={
-            <PhotoIcon/>
-        }
-        title="Skin Design"
-        href="/docs/features/skin-design"
-    >
-    </Card>
+  <Card
+    icon={
+      <UserIcon />
+    }
+    title="Custom Skins"
+    href="/docs/features/custom-skins"
+  >
+  </Card>
+  <Card
+    icon={
+      <GlobeAltIcon />
+    }
+    title="Skin URL"
+    href="/docs/features/skin-url"
+  >
+  </Card>
+  <Card
+    icon={
+      <PaintBrushIcon />
+    }
+    title="Skin Edit"
+    href="/docs/features/skin-edit"
+  >
+  </Card>
+  <Card
+    icon={
+      <PhotoIcon />
+    }
+    title="Skin Design"
+    href="/docs/features/skin-design"
+  >
+  </Card>
 </Cards>
