--- a/content/docs/installation/bukkit.mdx
+++ b/content/docs/installation/bukkit.mdx
@@ -10,8 +10,9 @@ import { Callout } from 'fumadocs-ui/components/callout';
 Before installing, we recommend you to read the [main installation page](/docs/installation).
 
 <Callout type="info" emoji="ℹ️">
-    If you're using BungeeCord or Velocity (or any fork of those), please follow the [BungeeCord installation guide](/docs/installation/bungeecord)
-    or the [Velocity installation guide](/docs/installation/velocity) instead.
+  If you're using BungeeCord or Velocity (or any fork of those), please follow the [BungeeCord installation
+  guide](/docs/installation/bungeecord)
+  or the [Velocity installation guide](/docs/installation/velocity) instead.
 </Callout>
 
 ## Basic Installation
@@ -19,30 +20,30 @@ Before installing, we recommend you to read the [main installation page](/docs/i
 In this section, you can read how to set up SkinsRestorer on your Bukkit/Spigot/Paper server.
 
 <Steps>
-    <Step>
+  <Step>
     ### Download the plugin
     Download the latest version from [Modrinth](https://modrinth.com/plugin/skinsrestorer)
-      </Step>
+  </Step>
 
-      <Step>
+  <Step>
     ### Put it in the plugins folder
     Place the `SkinsRestorer.jar` file in the `plugins` folder.
-      </Step>
+  </Step>
 
-        <Step>
+  <Step>
     ### Restart your server
     Restart the server. (Only use `/restart` or `/stop` Do NOT use `/reload`, As `/reload` will break
     SR!)[Plugman is also not supported]
-        </Step>
+  </Step>
 
-          <Step>
+  <Step>
     ### Verify the plugin is installed
     The plugin should now show as green in the `/plugins` command.
     If it's red or missing, please check your console logs for errors.
-          </Step>
+  </Step>
 
-            <Step>
+  <Step>
     ### That's it!
     You may now [configure SkinsRestorer](/docs/configuration).
-            </Step>
+  </Step>
 </Steps>
